[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling>=1,<2",
]

[project]
name = "tap-pulumi-cloud"
version = "0.0.0"
description = "Singer tap for Pulumi Cloud, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pulumi Cloud",
  "singer.io",
]
license = "Apache-2.0"
authors = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pyhumps>=3.8,<4",
  "requests-cache>=1.0.1,<2",
  "singer-sdk~=0.53.4",
  "typing-extensions~=4.15.0; python_full_version<'3.12'",
]

urls.Documentation = "https://github.com/edgarrmondragon/tap-pulumi-cloud#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-pulumi-cloud"
urls.Repository = "https://github.com/edgarrmondragon/tap-pulumi-cloud"
scripts.tap-pulumi-cloud = "tap_pulumi_cloud.tap:TapPulumiCloud.cli"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "typing" },
]
test = [
  "pytest>=9",
  "pytest-github-actions-annotate-failures>=0.2",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.19",
  "ty>=0.0.1a29",
  "types-requests>=2.32.4",
  { include-group = "test" },
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.ruff]
line-length = 88
src = [
  "tap_pulumi_cloud",
  "tests",
]
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]

lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tap_pulumi_cloud/streams.py" = [
  "RUF012", # mutable-class-default
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA", # Don't remove commented-out code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_pulumi_cloud",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pytest]
addopts = [ "-vvv" ]
minversion = "9"

[tool.mypy]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
