[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling>=1,<2",
]

[project]
name = "tap-pulumi-cloud"
description = "Singer tap for Pulumi Cloud, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pulumi Cloud",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "pyhumps>=3.8,<4",
  "requests-cache>=1.0.1,<2",
  "singer-sdk~=0.53.4",
  "typing-extensions~=4.15.0; python_full_version<'3.12'",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-pulumi-cloud = "tap_pulumi_cloud.tap:TapPulumiCloud.cli"
[project.urls]
Documentation = "https://github.com/edgarrmondragon/tap-pulumi-cloud#readme"
Homepage = "https://github.com/edgarrmondragon/tap-pulumi-cloud"
Repository = "https://github.com/edgarrmondragon/tap-pulumi-cloud"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "typing" },
]
test = [
  "pytest>=9",
  "pytest-github-actions-annotate-failures>=0.2",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.19",
  "ty>=0.0.23",
  "types-requests>=2.32.4",
  { include-group = "test" },
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.ruff]
line-length = 88
src = [
  "tap_pulumi_cloud",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tap_pulumi_cloud/streams.py" = [
  "RUF012", # mutable-class-default
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA", # Don't remove commented-out code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [
  "tap_pulumi_cloud",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
addopts = [
  "-vvv",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
min_version = "4.43"
requires = [
  "tox>=4.43",
  "tox-uv",
]
env_list = [
  "typing",
  { product = [
    { prefix = "3.", start = 10 },
  ] },
]
[tool.tox.env.typing]
dependency_groups = [ "test", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_pulumi_cloud", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_pulumi_cloud", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
  "GITHUB_*",
  "TAP_PULUMI_CLOUD_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
